# nd901-agentic-ai-with-langchain-and-langgraph

./: .gitignore  README.md  main.py  pyproject.toml
course-1-langchain-agentic-ai-fundamentals/lesson-02-creating-simple-langchain-application/: 02-03-demo-langchain-101.ipynb  02_04_exercise_create-a-chatbot-application.ipynb
course-1-langchain-agentic-ai-fundamentals/lesson_04-langchain-structured-outputs/: 04_01_demo_schemas-and-output-parsers.ipynb
course-1-langchain-agentic-ai-fundamentals/lesson_05-multi-step-workflows-in-langchain/: 05_02_demo_lcel.ipynb  05_03_exercise_multi-step-workflows.ipynb
course-1-langchain-agentic-ai-fundamentals/lesson_09-functions-as-tools-in-langchain/: 09_02_demo_functions-and-tools.ipynb
course-1-langchain-agentic-ai-fundamentals/lesson_10-agentic-workflows-with-langgraph/: 10_03_demo_building-a-workflow-with-langgraph.ipynb  10_04_exercise_create-a-router-with-langgraph.ipynb
course-1-langchain-agentic-ai-fundamentals/lesson_12-langgraph-state-management/: 12_03_demo_customer-service-state.ipynb  12_04_exercise_library_assistant.ipynb
course-1-langchain-agentic-ai-fundamentals/lesson_14-langgraph-agent-memory/: 14_03_demo_memory_and_checkpoints.ipynb  14_04_exercise_meal_suggester.ipynb
course-2-building-ai-agents-with-langgraph/lesson_03-integrating-external-tools-and-apis/: 03_01_demo_calling-apis.ipynb
course-2-building-ai-agents-with-langgraph/lesson_05-langgraph-database-agents/: 05_01_demo_creating-a-database-toolkit.ipynb  05_02_exercise_create-a-text2sql-react-agent.ipynb  sales.db  sql_toolkit.py
(+8 files in other folders)
