[project]
name = "nd901-agentic-ai-with-langchain-and-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "jupyter>=1.1.1",
    "langchain>=1.0.5",
    "langchain-openai>=1.0.2",
    "ruff>=0.14.4",
    "ty>=0.0.1a25",
]
