[project]
name = "nd901-agentic-ai-with-langchain-and-langgraph"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
  "langchain>=0.3,<0.4",
  "langchain-core>=0.3,<0.4",
  "langchain-openai>=0.2,<0.3",
  "python-dotenv>=1.0",
  "rich>=13", # 14.x gibt es (noch) nicht stabil
  "ruff>=0.5",
  "ty>=0.0.1a25",
  "jupyter>=1.0",
  "grandalf>=0.8",
  "langgraph>=1.0.1",
  "tavily>=1.1.0",
  "pandas>=2.3.3",
  "langchain-chroma>=0.2.6",
  "langchain-community>=0.3.31",
]
